Fixed typo in JO's name (SHAME!)

--- a/tip/509.md
+++ b/tip/509.md
@@ -95,7 +95,7 @@ is very unlikely that this will break any existing code:
   of the Tcl core, since this results in a deadlock. At best, this TIP will fix
   such hard-to-reproduce situations (case in point: TclX signals), and the code
   will transition from the nonworking state to the working state (which,
-  according to Dr. John Ousterhoot, is the best performance improvement). At
+  according to Dr. John Ousterhout, is the best performance improvement). At
   worst, this change will trigger a new class of reentrancy-related bugs on
   already broken code.
 - Multiplatform code in its current form behaves either inconsistently or
