--- a/tip/500.md
+++ b/tip/500.md
@@ -313,6 +313,8 @@ in the same thread or process; they are only ever locally unique.
 
 # Examples
 
+## Example: Private Variables and Tk
+
 This example shows a private variable linked to a Tk entry:
 
     oo::class create Editable {
@@ -344,6 +346,8 @@ This example shows a private variable linked to a Tk entry:
         puts "field is now [field value]"
     }}
     field value "Set the contents"
+
+## Example: Private Methods and Code Complexity Management
 
 Ths is an example of private methods. It shows how private methods can be used
 to manage the complexity of a method without making its API (as exposed to
@@ -394,6 +398,8 @@ either subclasses or the rest of Tcl) overly complex.
     puts $msg
     # Prints something like:
     #    unknown method "no.such.method": must be destroy or modulate
+
+## Example: Private Methods and Variables Working Together
 
 This is a combined example of private methods and variables.
 
@@ -449,6 +455,8 @@ This is a combined example of private methods and variables.
     puts [info vars [info object namespace $expr1]::*]
     # Prints something like:
 	#    {::oo::Obj13::11 : label} ::oo::Obj13::label
+
+## Example: Private Variable Naming and Creation IDs
 
 This example highlights the behaviour of private variables and
 `info object creationid`:
