Fix markdown formatting issue

--- a/tip/500.md
+++ b/tip/500.md
@@ -270,7 +270,8 @@ name are:
  * “`::`” — Namespace separator.
  * “`123`” — Declaring context ID, from the class that holds the definition of
    the private variable.
- * “` : `” — Private variable separator; a space, a colon, and another space.
+ * “<code> : </code>” — Private variable separator; specifically a space, a
+   colon, and another space.
    This is chosen to be very unlikely to be in user scripts by accident (as
    variable names with spaces and single colons are traditionally known to be
    awkward to use explicitly).
