--- a/tip/431.md
+++ b/tip/431.md
@@ -4,7 +4,7 @@
 	Type:		Project
 	Tcl-Version:	8.6.4
 	Vote:		Pending
-	Created:		10-Sep-2014
+	Created:	10-Sep-2014
 	Keywords:	Tcl, directory, file
 	Post-History:
 -----
@@ -26,7 +26,7 @@ without the possibility of race conditions.
 The **file tempdir** command shall implement the functionality of the POSIX
 standard mkdtemp\(\) function. With no arguments **file tempdir** shall create
 a uniquely named temporary directory in the native operating system's
-temporary directory, with naming convention "**tcl\_**_XXXXXX_" where each
+temporary directory, with naming convention "<b>tcl\_</b><i>XXXXXX</i>" where each
 _X_ is a randomly selected character \(following the **file tempfile**
 naming convention\). Successful completion of **file tempdir** shall return
 the absolute path of the created directory, otherwise an error shall be
@@ -37,7 +37,9 @@ the created directory's path and name. The _template_ shall be decomposed
 into \(up to\) two parts: the directory's path and rootname. If either part is
 absent, relevant defaults \(e.g., according to the native operating system\)
 shall be used. The entire temporary name shall then be formed from the path,
-the root, and a generated unique string of \(typically\) six characters.
+the root, and a generated unique string of \(typically\) six characters. If
+the directory part of the _template_ is supplied, it should refer to a
+directory on the native filesystem.
 
 The command syntax should be defined as:
 
@@ -50,11 +52,11 @@ The command syntax should be defined as:
    else such as **mktempdir** is another option, though strays from the **file
    tempfile** naming convention.
 
- * For future extensibility the **template** argument to **file tempdir**
+ * For future extensibility the _template_ argument to **file tempdir**
    \(since it is optional\) could be specified in the key / value format,
-   **-template**, changing the command syntax to:
+   **-template** _template_, changing the command syntax to:
 
-	 > > **file tempdir** ?_options..._?
+	 > **file tempdir** ?_options..._?
 
 # Reference Implementation
 
