tip454(resize frame on last child remove): withdrawn due to critical incompatibility. Should be restarted with alternate solution or in Tk 9.0

--- a/tip/454.md
+++ b/tip/454.md
@@ -2,7 +2,7 @@
 	Author:         Harald Oehlmann <Harald.Oehlmann@elmicron.de>
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Accepted
+	State:          Withdrawn
 	Type:           Project
 	Vote:           Done
 	Created:        21-Sep-2016
