Turns out that the existing temp-dir code was Windows only, within tclWinLoad.c.

--- a/tip/431.md
+++ b/tip/431.md
@@ -60,10 +60,10 @@ The command syntax should be defined as:
 
 # Reference Implementation
 
-An example of temporary directory creation has already been developed into the
-Tcl core, at the C level, within the platform specific layers of the
+An example of temporary directory creation has already been developed in the
+Tcl core, at the C level, within the Windows-specific layers of the
 **load** command. The principal work remaining is to expose this via a Tcl
-command.
+command and building equivalent functionality on other platforms.
 
 # Copyright
 
