Clarify private method name interactions.

--- a/tip/500.md
+++ b/tip/500.md
@@ -108,7 +108,13 @@ whatever that is, and that can dispatch to later items on the call chain using
 
 A private method on a class (or object) may not have the same name as another
 method on that class; all methods of a class (or object) are part of a single
-space of names. When resolving a method call of a subclass of the class that
+space of names. Creating a public or unexported method with the same name in
+the same declaration context will delete the private method, just as it would
+delete any other visibility of method defined on the same scope; this is
+assumed to be a minor issue for most code as the methods on a particular class
+(as opposed to its superclasses, subclasses or instances) are assumed to be
+strongly cooperative with each other.
+When resolving a method call of a subclass of the class that
 has the private method, even if the method names match, the private method
 does not participate in the call chain; only an exact match from exactly the
 right context counts.
@@ -118,6 +124,11 @@ instance) that defined the method; subclasses or instances cannot export or
 unexport a private method defined by their superclass/class (respectively).
 There is no mechanism for making an existing method private; that needs to be
 done at method creation time.
+Method declarations on other declaration contexts (e.g., on subclasses) do not
+affect private methods at all. Private methods cannot be used for filter
+implementations; the caller's context is not considered when resolving filters
+so private methods are ignored (though a filter implementation may of course
+call a private method).
 
 In particular:
 
