Updated the abstract

--- a/tip/500.md
+++ b/tip/500.md
@@ -11,7 +11,10 @@
 
 # Abstract
 
-This TIP proposes a mechanism for (somewhat) private variables in TclOO.
+This TIP proposes a mechanism for private methods and variables in TclOO.
+Private methods are methods that can only be called from methods of the same
+class. Private variables have names so that they are unlikely to be used
+by subclasses by accident (but can still be used from **vwait**, Tk, etc.)
 
 # Rationale
 
