--- a/tip/500.md
+++ b/tip/500.md
@@ -2,7 +2,7 @@
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        10-Feb-2018
 	Post-History:
 	Keywords:       Tcl, object orientation, visibility
