--- a/tip/500.md
+++ b/tip/500.md
@@ -1,12 +1,14 @@
 # TIP 500: Private Methods and Variables in TclOO
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        10-Feb-2018
 	Post-History:
 	Keywords:       Tcl, object orientation, visibility
 	Tcl-Version:    8.7
+	Votes-For:      DKF, JN, AF, JD, SL, AK, KBK
+	Votes-Against:  none
 -----
 
 # Abstract
