--- a/tip/500.md
+++ b/tip/500.md
@@ -1,6 +1,6 @@
 # TIP 500: Private Methods and Variables in TclOO
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        10-Feb-2018
