--- a/tip/510.md
+++ b/tip/510.md
@@ -1,5 +1,5 @@
 # TIP 510: Add Rbc to Tk
-	Author:         René Zaumseil <rzaumseil@kkg.ch>
+	Author:         René Zaumseil <r.zaumseil@freenet.de>
 	State:          Draft
 	Type:           Project
 	Vote:           
@@ -37,12 +37,12 @@ The **Rbc__Init()** function will be added in tkWindow.c
 # Discussion
 
 Which commands should be included?
-  **vector**: needed for graph
-  **graph**: curve display widget
-  **stripchart**: 
-  **barchart**:
-  **busy**: not needed, because we already have **tk busy**
-  **winop**: ?
+- **vector**: needed for graph
+- **graph**: curve display widget
+- **stripchart**: 
+- **barchart**:
+- **busy**: not needed, because we already have **tk busy**
+- **winop**: ?
 
 Should there be a special switch to enable compiling and including *Rbc*?
 
@@ -61,7 +61,7 @@ Test/Documentation updates not yet done.
 
 # Alternatives
 
-- using another library with full svg support
+- Rewrite new tk widgets with code of rbc
 
 # Copyright
 
