Other tips try to address the same issues as 434, there never was a real consensus to expose this functionality, and it's easy to write your own version of vwait to do what you want with Tcl's C API.

--- a/tip/434.md
+++ b/tip/434.md
@@ -1,6 +1,6 @@
 # TIP 434: Specify Event Sources for 'vwait'
 	Author:		Jos Decoster <jos.decoster@gmail.com>
-	State:		Draft
+	State:		Withdrawn
 	Type:		Project
 	Tcl-Version:	8.6
 	Vote:	Pending
