--- a/tip/442.md
+++ b/tip/442.md
@@ -1,5 +1,5 @@
 # TIP 442: Display text in progressbars
-	Author:         René Zaumseil <rzaumseil@kkg.ch>
+	Author:         René Zaumseil <r.zaumseil@freenet.de>
 	Author:         Kevin B Kenny <kevin.b.kenny@gmail.com>
 	Author:         Andreas Leitgeb <avl@logic.at>
 	Author:         Kevin Kenny <Kevin.B.Kenny@gmail.com>
