--- a/tip/496.md
+++ b/tip/496.md
@@ -1,5 +1,5 @@
 # TIP 496: Display hints in ::entry ::spinbox ::ttk::entry ::ttk::spinbox and ::ttk::combobox
-	Author:         René Zaumseil <rzaumseil@kkg.ch>
+	Author:         René Zaumseil <r.zaumseil@freenet.de>
 	Author:         François Vogel <fvogelnew1@free.fr>
 	State:          Final
 	Type:           Project
