--- a/tip/507.md
+++ b/tip/507.md
@@ -1,5 +1,5 @@
 # TIP 507: Include simple svg support with nanosvg
-	Author:         René Zaumseil <rzaumseil@kkg.ch>
+	Author:         René Zaumseil <r.zaumseil@freenet.de>
 	State:          Draft
 	Type:           Project
 	Vote:           
