--- a/tip/510.md
+++ b/tip/510.md
@@ -51,7 +51,8 @@ Should we change *Rbc* to some other name to prevent name clashes?
 
 Should we export a C-interface?
 
-See also discussion at http://wiki.tcl.tk/55360
+See also discussion at the [wiki]
+(http://wiki.tcl.tk/55360).
 
 # Implementation
 
