Tip 508: Clarify behavior of default value with read traces

--- a/tip/508.md
+++ b/tip/508.md
@@ -59,6 +59,11 @@ The following _option_ values are supported:
   value. Does nothing if _arrayName_ does not exist. Raise an error if
   _arrayName_ is not an array variable.
 
+The default value is only used as a last resort where an error would normally
+occur when accessing a non-existing array element. Read traces are processed
+before that point and are free to set the element value or modify the default
+value.
+
 # Examples
 
 Initial state:
@@ -161,7 +166,31 @@ variable:
 	% array default set var2 1234
 	% array exists var2
 	1
-		
+
+The default value can be set, modified or unset by trace handlers:
+
+	% set var(foo)
+	can't read "var(foo)": no such element in array
+	% trace add variable var read setRandomDefault
+	% proc setRandomDefault {name1 name2 op} {
+	    upvar $name1 arr
+	    array default set arr [expr {rand()}]
+	}
+	% set var(foo)
+	0.9132881643778124
+	% set var(foo)
+	0.6341786978925479
+	% set var(foo)
+	0.5976932461362766 
+	% array default get var
+	0.5976932461362766
+	% proc setRandomDefault {name1 name2 op} {
+	    upvar $name1 arr
+	    array default unset arr
+	}
+	% set var(foo)
+	can't read "var(foo)": no such element in array
+
 
 # Implementation
 
