--- a/tip/508.md
+++ b/tip/508.md
@@ -11,7 +11,7 @@
 
 # Abstract
 
-This TIP proposes a new `[array default]` subcommand that allows default values
+This TIP proposes a new **array default** subcommand that allows default values
 for arrays, causing that value to be returned any time an attempt is made to
 access an element of the array that isn't present.
 
@@ -20,48 +20,49 @@ access an element of the array that isn't present.
 For its most basic usages, a Tcl array variable can be seen as a collection of
 scalar variables. However, an array also has its own existence as a variable and
 provides specficic actions on itself and on its elements. For exampe, the
-regular way to check for a variable existence is to use the `[info exists]`
+regular way to check for a variable existence is to use the **info exists**
 command, and this is true for both arrays and scalars (including array
-elements); likewise, the `[set]` command is used to read and write the value of
+elements); likewise, the **set** command is used to read and write the value of
 a scalar vars and array elements, however array variables have no value in
 themselves but provide a way to get and set several of its elements at once.
 
-For more advanced usages, one must get past the simple 'collection of scalars'
+For more advanced usages, one must get past the simple ‘collection of scalars’
 viewpoint. A typical example is sparse arrays: at present, an implementation
-requires a combination of `[array exists]` (or `[info exists]`) and `[set]`: the
+requires a combination of **array exists** (or **info exists**) and **set**: the
 former to test the presence of a key in an array, the latter to get or set the
 actual value, and in this order. Failure to do so is likely to cause runtime
 errors.
 
-This document therefore proposes to add a new `[array default]` subcommand in
+This document therefore proposes to add a new **array default** subcommand in
 order to support such advanced usages. Sparse arrays built on this new feature
-will be simplerw, more robust, faster, all the while being memory efficient.
+will be simpler, more robust, faster, all the while being memory efficient.
 
 # Specification
 
-A new `array default` subcommand will be created with the following syntax:
+A new **array default** subcommand will be created with the following syntax:
 
-> `array default ` _`option arrayName ?arg?`_ : Default value management. 
-   
+> **array default**  _option arrayName_ ?_arg_?
+
 The following _option_ values are supported:
 
-* <code>array default get <em>arrayName</em></code>: Get _arrayName_
+* **array default get** _arrayName_: Get _arrayName_
   default value. Raise an error if _arrayName_ is not an array variable or if it
   has no default value.
-* <code>array default set <em>arrayName</em> <em>value</em></code>: Set
-  _arrayName_ default value. If the variable _arrayName_ does not already exist,
+* **array default set** _arrayName value_: Set the default value for
+  the array _arrayName_. If the variable _arrayName_ does not already exist,
   it is created with an empty array value. Raise an error if _arrayName_ is an
   existing scalar variable or an invalid array name.
-* <code>array default exists <em>arrayName</em></code>: Test whether
+* **array default exists** _arrayName_: Test whether array
   _arrayName_ has a default value. Return false if _arrayName_ does not exist.
-  Raise an error if _arrayName_ is not an array variable.
-* <code>array default unset <em>arrayName</em></code>: Unset _arrayName_ default
-  value. Does nothing if _arrayName_ does not exist. Raise an error if
+  Raise an error if _arrayName_ exists but is not an array variable.
+* **array default unset** _arrayName_: Unsets _arrayName_'s default
+  value so that the array no longer has a default. Does nothing if
+  _arrayName_ does not exist. Raise an error if
   _arrayName_ is not an array variable.
 
 The default value is only used as a last resort where an error would normally
 occur when accessing a non-existing array element. Read traces are processed
-before that point and are free to set the element value or modify the default
+_before_ that point and are free to set the element value or modify the default
 value.
 
 # Examples
@@ -133,7 +134,7 @@ Changing the default value only impact missing entries:
 	% set var(c)
 	9999
 
-Default values don't show in entry lists or iterations:
+Default values do not show in entry lists or iterations:
 
 	% array names var
 	a b
