--- a/tip/508.md
+++ b/tip/508.md
@@ -19,7 +19,7 @@ access an element of the array that isn't present.
 
 For its most basic usages, a Tcl array variable can be seen as a collection of
 scalar variables. However, an array also has its own existence as a variable and
-provides specficic actions on itself and on its elements. For exampe, the
+provides specific actions on itself and on its elements. For example, the
 regular way to check for a variable existence is to use the **info exists**
 command, and this is true for both arrays and scalars (including array
 elements); likewise, the **set** command is used to read and write the value of
@@ -45,19 +45,19 @@ A new **array default** subcommand will be created with the following syntax:
 
 The following _option_ values are supported:
 
-* **array default get** _arrayName_: Get _arrayName_
-  default value. Raise an error if _arrayName_ is not an array variable or if it
-  has no default value.
-* **array default set** _arrayName value_: Set the default value for
+* **array default get** _arrayName_ — Get the default value for the array
+  _arrayName_. Raise an error if _arrayName_ is not an array variable
+  or if it has no default value.
+* **array default set** _arrayName value_ — Set the default value for
   the array _arrayName_. If the variable _arrayName_ does not already exist,
   it is created with an empty array value. Raise an error if _arrayName_ is an
   existing scalar variable or an invalid array name.
-* **array default exists** _arrayName_: Test whether array
+* **array default exists** _arrayName_ — Tests whether the array
   _arrayName_ has a default value. Return false if _arrayName_ does not exist.
-  Raise an error if _arrayName_ exists but is not an array variable.
-* **array default unset** _arrayName_: Unsets _arrayName_'s default
+  Raises an error if a variable _arrayName_ exists but is not an array variable.
+* **array default unset** _arrayName_ — Unsets _arrayName_'s default
   value so that the array no longer has a default. Does nothing if
-  _arrayName_ does not exist. Raise an error if
+  _arrayName_ does not exist. Raises an error if
   _arrayName_ is not an array variable.
 
 The default value is only used as a last resort where an error would normally
