Working on improving TIP 478

--- a/tip/478.md
+++ b/tip/478.md
@@ -1,5 +1,6 @@
 # TIP 478: Add Expected Class Level Behaviors to oo::class
 	Author:         Gerald Lester <Gerald.Lester@gmail.com>
+	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	State:          Draft
 	Type:           Project
 	Vote:           Pending
@@ -22,17 +23,57 @@ class variable and not to instance/object variables.  They also provide a way to
 The proposal is to add some or all of the functionality of `oo::util`, in particular the `classvariable` and `classmethod`.
 Additionally, it is proposed to add an `initialise` class definition command to all the initialization of class variables.
 
+## New Metaclasses
+
+The `oo::singleton` metaclass only allows a single instance of the class that
+it is mixed into to exist at a time. It hides the `create` method on the class and
+implements a cache so that the `new` method will only create an instance of
+the class if there is not an existing instance. Subclasses of the singleton
+class are _not_ restricted.
+
+The `oo::abstract` metaclass does not allow any instances of the class that it
+is mixed into to be created, hiding the instantiation methods (`create`,
+`new`, etc.) of that class. The class can still be inherited from and those
+subclasses can be instantiated.
+
+## New Definitions
+
+The `classmethod` class definition creates a method that can be used when
+invoked against its defining class or any of its subclasses.
+
+The `classvariable` class definition creates a variable that exists in a
+class's namespace and which is linked into any instance of that class
+(including instances of subclasses); setting the variable with that name from
+any of those instances or from the class will result in changes that can be
+observed from all instances of that class.
+
+The `initialise` class definition evaluates a script in a context where it can
+access the class's namespace, allowing for easier initialisation of a class
+than simply overriding its constructor.
+
+## New Helper Commands
+
+The `callback`/`mymethod` command, available within methods, takes the name of
+a method and zero-or-more arguments and returns a script fragment that will
+allow that method easy to invoke from a callback (e.g., a variable `trace`,
+`chan event` callback, or Tk event binding). The command will be available
+with both names.
+
+The `link` command, available within methods, creates a binding for methods
+so that calling the command with the given name is equivalent to calling
+`my $name` instead. It can link multiple methods with one call, one per
+argument, and those created commands can be renamed without losing the link;
+if an argument is a two-element list, the first element is the name of the
+method and the second is the name of the command (which will be resolved
+relative to the current namespace if it is not an absolute command name).
+
 # Reference Implementation
 
 Reference implementations are mentioned in the proposal section. Additionally, this is a reference implementation for `initialise`:
 <pre>
   proc ::oo::define::initialise {body} {
-      if {[package vsatisfies [package require Tcl] 8.7]} {
-          set cls [uplevel 1 self]
-      } else {
-          set cls [lindex [info level -1] 1]
-      }
-      tailcall apply [list {} $body [info object namespace $cls]]
+      set clsns [info object namespace [uplevel 1 self]]
+      tailcall apply [list {} $body $clsns]
   }
 </pre>
 
