--- a/tip/507.md
+++ b/tip/507.md
@@ -74,7 +74,7 @@ The new format is in the photo.n man page described.
 	    <polygon fill ="yellow" points="80,80 70,85 90,90"/>
 	    </svg>}
 	    # create image
-	    image create foo -data $data
+	    image create photo foo -data $data
 	    # change size
 	    foo configure -format {svgnano -scale 2}
 	    # move right and up, all other values are reset
