Got the description of classvariable wrong.

--- a/tip/478.md
+++ b/tip/478.md
@@ -41,12 +41,6 @@ subclasses can be instantiated.
 The `classmethod` class definition creates a method that can be used when
 invoked against its defining class or any of its subclasses.
 
-The `classvariable` class definition creates a variable that exists in a
-class's namespace and which is linked into any instance of that class
-(including instances of subclasses); setting the variable with that name from
-any of those instances or from the class will result in changes that can be
-observed from all instances of that class.
-
 The `initialise` class definition evaluates a script in a context where it can
 access the class's namespace, allowing for easier initialisation of a class
 than simply overriding its constructor.
@@ -58,6 +52,9 @@ a method and zero-or-more arguments and returns a script fragment that will
 allow that method easy to invoke from a callback (e.g., a variable `trace`,
 `chan event` callback, or Tk event binding). The command will be available
 with both names.
+
+The `classvariable` command, available within methods, binds a local variable
+to a variable within the namespace of the class that defined the method.
 
 The `link` command, available within methods, creates a binding for methods
 so that calling the command with the given name is equivalent to calling
