Correction from Christian Werner

--- a/tip/511.md
+++ b/tip/511.md
@@ -78,7 +78,7 @@ owning target thread of the `Tcl_AsyncHandler`.
 
 Bug #f4f44174 demonstrates a deadlock issue with a script based on TclX
 observed with the Tcl 8.6 `select()`-based notifier. It is caused by the
-`posix_mutex_*()` functions not supporting reentrant locking by default and
+`pthread_mutex_*()` functions not supporting reentrant locking by default and
 not being async-signal-safe.
 
 # Implementation
