--- a/tip/512.md
+++ b/tip/512.md
@@ -19,18 +19,18 @@ The normal exported symbols for those functions will be kept intact.
 
 This TIP is inspired by Tcl commit ["Add custom exit procedure for
 tcltests executable"](http://core.tcl.tk/tcl/info/6f650b4271a1ef2e)
-(thanks to Poor Yorick!). This commit demonstrates exactly what's the problem
-when using `Tcl_SetExitProc()` in a stub-enabled extension.
+(thanks to Poor Yorick!). This commit demonstrates exactly what's the
+problem when using `Tcl_SetExitProc()` in a stub-enabled extension.
 
 # Rationale
 
 When running test-cases in Windows (using mingw-64 or msvc, but using the
-win/Makefile system not the nmake system), the tcltest executable
-crashes after shutdown with some tests. The reason for this is that
+win/Makefile system not the nmake system), the tclsh executable
+crashes after shutdown in some tests. The reason for this is that
 the additional test-code "tcltest" is compiled as stub-enabled extension
 which is dynamically loaded into tclsh. So, there is no "tcltest"
-executable in this environment, all there is is tclsh86.exe and
-tcltest86.dll.
+executable in this environment, tclsh86.exe and tcltest86.dll are
+sufficient.
 
 If a stub-enabled extension registers an Exit-handler, the following
 happens at exit time. During the clean-up, Tcl unloads all extensions.
@@ -39,7 +39,7 @@ Exit-handler. But ... since the exit handler function was located
 inside the dll, it's address space is gone already. This results
 in the mentioned crash.
 
-The same problem exists in `Tcl_SetPanicProc()`: If a stub-enabled
+A similar problem exists in `Tcl_SetPanicProc()`: If a stub-enabled
 extension registers a Panic proc which is located in its own
 address space, the extension might be gone when the panicproc is
 finally called.
@@ -51,10 +51,10 @@ the stub table either.
 
 # Specification
 
-The above mentioned functions are marked with _nostub_, and the
-tools/genStubs.tcl tooling is adapted to recognize this special
-keyword. It means that the function entry in the stub table is
-marked as deprecated, but the normal function entry is leaf as-is.
+The above mentioned functions are marked with _nostub_ (in tcl.decls),
+and the tools/genStubs.tcl tooling is adapted to recognize this special
+keyword. The effect is that the function entry in the stub table is
+marked as deprecated, but the normal function entry is left as-is.
 
 When Tcl is compiled with -DTCL\_NO\_DEPRECATED, the stub entries for
 the above functions will no longer be available. The stub table
@@ -67,7 +67,7 @@ exported symbols, just like `Tcl_MainEx()` (for example).
 # Implementation
 
 Currently, the proposed implementation is available in [tip-512 branch]
-(https://core.tcl.tk/tk/timeline?r=tip-512).
+(https://core.tcl.tk/tcl/timeline?r=tip-512).
 
 # Copyright
 
