--- a/tip/483.md
+++ b/tip/483.md
@@ -86,6 +86,11 @@ Examples of the files expected to be found in the configured directories in pare
   The new name more accurately describes the tests but maybe it's better to go along with Tcl?
 * Only tested on Unix.
 
+# Status 2018/07/04:
+* Changes made based on recommendations in <http://code.activestate.com/lists/tcl-core/19816/>
+* Tk checkin: <https://core.tcl.tk/tk/info/d65d0705151eb38b>
+* Tcl checkin: <https://core.tcl.tk/tcl/info/14bb7ec850ddaf66>
+
 # Reference Implementation
 
 The reference implementation is available in the tk-stu-pkg branch. <http://core.tcl.tk/tk/timeline?r=tk-stu-pkg>
