Add [myclass] to documented changes.

--- a/tip/478.md
+++ b/tip/478.md
@@ -23,6 +23,15 @@ class variable and not to instance/object variables.  They also provide a way to
 The proposal is to add some or all of the functionality of `oo::util`, in particular the `classvariable` and `classmethod`.
 Additionally, it is proposed to add an `initialise` class definition command to all the initialization of class variables.
 
+## New Basic Features
+
+The `myclass` command (created in each object's namespace) allows any method
+(exported or unexported) of the current class of the owning object to be
+invoked. It is like using `info object class` to look up the class of the
+current object, `info object namespace` to find the namespace of the class,
+then using the `my` command in that namespace (assuming that it hasn't been
+renamed). This is implemented in C so it is fast, effective, and robust.
+
 ## New Metaclasses
 
 The `oo::singleton` metaclass only allows a single instance of the class that
