--- a/tip/513.md
+++ b/tip/513.md
@@ -125,7 +125,7 @@ feature.
 
 # Prototype Implementation
 
-The [prototype implementation](../assets/513/agendas.tcl) has the desired
+The [prototype implementation](../attach/513/agendas.tcl) has the desired
 semantics, but does not even come close to the performance desired.  These
 functions have to be implemented in C and take advantage of the internal
 representation to fulfill the proposed performance gains.
