--- a/tip/511.md
+++ b/tip/511.md
@@ -2,7 +2,7 @@
 	Author:         Christian Werner <undroidwish@googlemail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           
+	Vote:           Pending
 	Created:        14-June-2018
 	Post-History:   
 	Keywords:       Tcl,threads
