--- a/tip/513.md
+++ b/tip/513.md
@@ -2,7 +2,7 @@
 	Author:         Florian Murr <florian.murr@siemens.com>
 	State:          Draft
 	Type:           Project
-	Vote:           
+	Vote:           Pending
 	Created:        02-Aug-2017
 	Post-History:   
 	Keywords:       Tcl,data structure
