--- a/tip/512.md
+++ b/tip/512.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           
+	Vote:           Pending
 	Created:        25-June-2018
 	Post-History:   
 	Keywords:       Tcl
