Tightened up the spec in a few places and added a few key examples.

--- a/tip/478.md
+++ b/tip/478.md
@@ -48,11 +48,31 @@ subclasses can be instantiated.
 ## New Definitions
 
 The `classmethod` class definition creates a method that can be used when
-invoked against its defining class or any of its subclasses.
+invoked against its defining class or any of its subclasses. When a class
+method is invoked on the class _or any of its subclasses_, the current object
+(i.e., the object reported by `self`) will be the class on which it is invoked
+(i.e., the subclass if it is invoked against a subclass). When a class method
+is invoked on an object that is an instance of the class _or any of its
+subclasses_, the current object will be the current class of the object on
+which the method was invoked. Thus:
+
+    oo::class create Super {
+        classmethod x {} {puts "self is [self]"}
+    }
+    oo::class create Sub {superclass Super}
+    set instSuper [Super new]
+    set instSub [Sub new]
+
+    Super x;        # prints 'self is ::Super'
+    Sub x;          # prints 'self is ::Sub'
+    $instSuper x;   # prints 'self is ::Super'
+    $instSub x;     # prints 'self is ::Sub'
 
 The `initialise` class definition evaluates a script in a context where it can
 access the class's namespace, allowing for easier initialisation of a class
-than simply overriding its constructor.
+than simply overriding its constructor. It has the alternate name,
+`initialize`. In particular, this makes it much easier to create procedures
+and variables in that namespace.
 
 ## New Helper Commands
 
@@ -76,12 +96,18 @@ relative to the current namespace if it is not an absolute command name).
 # Reference Implementation
 
 Reference implementations are mentioned in the proposal section. Additionally, this is a reference implementation for `initialise`:
-<pre>
-  proc ::oo::define::initialise {body} {
-      set clsns [info object namespace [uplevel 1 self]]
-      tailcall apply [list {} $body $clsns]
-  }
-</pre>
+
+    proc ::oo::define::initialise {body} {
+        set clsns [info object namespace [uplevel 1 self]]
+        tailcall apply [list {} $body $clsns]
+    }
+
+This is a reference implementation for `oo::abstract`:
+
+    oo::class create oo::abstract {
+        superclass oo::class
+        unexport create createWithNamespace new
+    }
 
 # Copyright
 
