Fix obsolete email address

--- a/tip/24.md
+++ b/tip/24.md
@@ -41,7 +41,7 @@ assigned:
 
    1. _Notifier_ - Kevin Kenny <kennykb@acm.org> \(Win32, Solaris, HP-UX\), Daniel Steffen <das@users.sf.net> \(Mac OS X\), Alexandre Ferrieux <ferrieux@users.sf.net>
 
-   1. _Event Loops_ - Jan Nijtmans <j.nijtmans@chello.nl>, Jeff Hobbs <JeffH@ActiveState.com>
+   1. _Event Loops_ - Jan Nijtmans <jan.nijtmans@gmail.com>, Jeff Hobbs <JeffH@ActiveState.com>
 
    1. _Timer Events_ - Kevin Kenny <kennykb@acm.org>, Jeff Hobbs <JeffH@ActiveState.com>
 
@@ -62,11 +62,11 @@ assigned:
 
    1. _Conversions from String_ - Jeff Hobbs <JeffH@ActiveState.com>
 
-   1. _ByteArray Objects_ - Donal K. Fellows <dkf@users.sf.net>, Jan Nijtmans <j.nijtmans@chello.nl>, Alexandre Ferrieux <ferrieux@users.sf.net>, Jeff Hobbs <JeffH@ActiveState.com>
+   1. _ByteArray Objects_ - Donal K. Fellows <dkf@users.sf.net>, Jan Nijtmans <jan.nijtmans@gmail.com>, Alexandre Ferrieux <ferrieux@users.sf.net>, Jeff Hobbs <JeffH@ActiveState.com>
 
-   1. _Index Object_ - Jan Nijtmans <j.nijtmans@chello.nl>, Jeff Hobbs <JeffH@ActiveState.com>
+   1. _Index Object_ - Jan Nijtmans <jan.nijtmans@gmail.com>, Jeff Hobbs <JeffH@ActiveState.com>
 
-   1. _List Object_ - Jan Nijtmans <j.nijtmans@chello.nl>, Jeff Hobbs <JeffH@ActiveState.com>
+   1. _List Object_ - Jan Nijtmans <jan.nijtmans@gmail.com>, Jeff Hobbs <JeffH@ActiveState.com>
 
    1. _Dict Object_ - Donal K. Fellows <dkf@users.sf.net>
 
@@ -106,7 +106,7 @@ assigned:
 
    1. _msgcat Package_ - Harald Oehlmann <oehhar@users.sf.net>
 
-   1. _opt Package_ - Jan Nijtmans <j.nijtmans@chello.nl>
+   1. _opt Package_ - Jan Nijtmans <jan.nijtmans@gmail.com>
 
    1. _registry Package_ - Kevin Kenny <kennykb@acm.org>
 
@@ -136,7 +136,7 @@ assigned:
    1. _Package Manager_ -  Don Porter <dgp@users.sf.net>, Jeff Hobbs <JeffH@ActiveState.com>
 
    1. _Dynamic Loading_ -  Kevin Kenny <kennykb@acm.org>,
-                             Jan Nijtmans <j.nijtmans@chello.nl>,
+                             Jan Nijtmans <jan.nijtmans@gmail.com>,
 			     Jeff Hobbs <JeffH@ActiveState.com>,
                              Daniel Steffen <das@users.sf.net> \(Mac OS X\),
                              Jim Ingham <jingham@apple.com> \(Mac OS X\)
@@ -149,7 +149,7 @@ assigned:
    1. _Regexp_ - Pavel Goran <pvgoran@newmail.ru>,
 		Colin McCormack <coldstore@users.sf.net>
 
-   1. _UTF-8 Strings_ - Jan Nijtmans <j.nijtmans@chello.nl>, Jeff Hobbs <JeffH@ActiveState.com>
+   1. _UTF-8 Strings_ - Jan Nijtmans <jan.nijtmans@gmail.com>, Jeff Hobbs <JeffH@ActiveState.com>
 
    1. _Parsing and Eval_ - Miguel Sofer <msofer@users.sf.net>, Jeff Hobbs <JeffH@ActiveState.com>, Don Porter <dgp@users.sf.net>
 
