--- a/tip/30.md
+++ b/tip/30.md
@@ -1,7 +1,7 @@
 # TIP 30: Tk Toolkit Maintainer Assignments
 	Author:         Don Porter <dgp@users.sourceforge.net>
 	Author:         Donal K. Fellows <fellowsd@cs.man.ac.uk>
-	Author:         Jan Nijtmans <j.nijtmans@chello.nl>
+	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	Author:         Todd M. Helfter <tmh@purdue.edu>
 	Author:         Chengye Mao <chengye.geo@yahoo.com>
 	Author:         George B. Smith <gbs@k9haven.com>
@@ -52,10 +52,10 @@ assigned:
                                   Vincent Darley <vincentdarley@users.sourceforge.net> \(Mac OS X\)
 
    4. _Canvas Basics_ - Jeff Hobbs <JeffH@ActiveState.com>,
-			  Jan Nijtmans <j.nijtmans@chello.nl>
+			  Jan Nijtmans <jan.nijtmans@gmail.com>
 
    5. _Canvas Items_ - Jeff Hobbs <JeffH@ActiveState.com>,
-			 Jan Nijtmans <j.nijtmans@chello.nl>
+			 Jan Nijtmans <jan.nijtmans@gmail.com>
 
    6. _Canvas PostScript_ - Jeff Hobbs <JeffH@ActiveState.com>
 
@@ -112,7 +112,7 @@ assigned:
 		    Frédéric Bonnet <fredericbonnet@free.fr>
 
    25. _Built-in Bitmaps_ - Jeff Hobbs <JeffH@ActiveState.com>,
-			      Jan Nijtmans <j.nijtmans@chello.nl>,
+			      Jan Nijtmans <jan.nijtmans@gmail.com>,
                               Daniel Steffen <das@users.sourceforge.net> \(Mac OS X\),
                               Jim Ingham <jingham@apple.com> \(Mac OS X\)
 
@@ -157,18 +157,18 @@ assigned:
    38. _[tk_messageBox]_ - Donal K. Fellows <donal.k.fellows@man.ac.uk> \(Unix\),
 			     Jeff Hobbs <JeffH@ActiveState.com>
 
-   39. _Image Basics_ - Jan Nijtmans <j.nijtmans@chello.nl>,
+   39. _Image Basics_ - Jan Nijtmans <jan.nijtmans@gmail.com>,
 			  Donal K. Fellows <donal.k.fellows@man.ac.uk>
 
-   40. _Bitmap Images_ - Jan Nijtmans <j.nijtmans@chello.nl>,
+   40. _Bitmap Images_ - Jan Nijtmans <jan.nijtmans@gmail.com>,
 			   Kevin Griffin <vertov@artstar.com>
 
-   41. _Photo Images_ - Jan Nijtmans <j.nijtmans@chello.nl>,
+   41. _Photo Images_ - Jan Nijtmans <jan.nijtmans@gmail.com>,
 			  Donal K. Fellows <donal.k.fellows@man.ac.uk>
 
-   42. _Photo Image\|GIF_ - Jan Nijtmans <j.nijtmans@chello.nl>
+   42. _Photo Image\|GIF_ - Jan Nijtmans <jan.nijtmans@gmail.com>
 
-   43. _Photo Image\|PPM_ - Jan Nijtmans <j.nijtmans@chello.nl>,
+   43. _Photo Image\|PPM_ - Jan Nijtmans <jan.nijtmans@gmail.com>,
 			     Donal K. Fellows <donal.k.fellows@man.ac.uk>
 
    44. _Generic Fonts_ - Jeff Hobbs <JeffH@ActiveState.com>
@@ -249,7 +249,7 @@ assigned:
    69. _Events_ - Jeff Hobbs <JeffH@ActiveState.com>
 
    70. _Event Loop_ - Jeff Hobbs <JeffH@ActiveState.com>,
-			Jan Nijtmans <j.nijtmans@chello.nl>
+			Jan Nijtmans <jan.nijtmans@gmail.com>
 
    71. _Error Handling_ - Jeff Hobbs <JeffH@ActiveState.com>
 
@@ -274,7 +274,7 @@ assigned:
    78. _Other Demos_ - Donal K. Fellows <donal.k.fellows@man.ac.uk>,
 			 Jeff Hobbs <JeffH@ActiveState.com>
 
-   79. _L10N_ - Jan Nijtmans <j.nijtmans@chello.nl>,
+   79. _L10N_ - Jan Nijtmans <jan.nijtmans@gmail.com>,
 		  Miguel Bañón <bagnonm@safelayer.com>
 
    80. _Release Notes_ - Jeff Hobbs <JeffH@ActiveState.com>
